2005-11-16  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff viper.

2005-11-15  Norbert Koch  <viteno@xemacs.org>

	* Packages released: gnus.

2005-11-14  Norbert Koch  <viteno@xemacs.org>

	* Packages released: edit-utils.

	* Packages released: edit-utils games.

2005-11-07  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff games viper.

2005-11-02  Norbert Koch  <viteno@xemacs.org>

	* Packages released: edit-utils text-modes.

2005-10-29  Norbert Koch  <viteno@xemacs.org>

	* Packages released: supercite.

2005-10-28  Norbert Koch  <viteno@xemacs.org>

	* Packages released: mail-lib.

	* Packages released: xemacs-base.

2005-10-21  Norbert Koch  <viteno@xemacs.org>

	* Packages released: erc.

2005-10-18  Norbert Koch  <viteno@xemacs.org>

	* Packages released: sh-script.

2005-10-16  Norbert Koch  <viteno@xemacs.org>

	* Packages released: edit-utils erc ispell sh-script.

2005-10-15  Norbert Koch  <viteno@xemacs.org>

	* Packages released: sh-script.

2005-10-12  Norbert Koch  <viteno@xemacs.org>

	* Packages    released:  apel  bbdb gnus  liece    net-utils tramp
	xemacs-base xemacs-devel.

2005-10-09  Norbert Koch  <viteno@xemacs.org>

	* Packages released: tramp.

2005-10-06  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff net-utils viper.

2005-09-26  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ecrypto mail-lib.

	* Packages released: pgg.

	* Packages released: sasl sieve texinfo.

2005-09-21  Norbert Koch  <viteno@xemacs.org>

	* Packages released: ediff text-modes viper.

2005-09-12  Norbert Koch  <viteno@xemacs.org>

	* Packages released: re-builder.

2005-08-31  Norbert Koch  <viteno@xemacs.org>

	* Packages released: edit-utils re-builder riece.

2005-08-08  Norbert Koch  <viteno@xemacs.org>

	* Packages released: tramp viper.

2005-07-27  Norbert Koch  <viteno@xemacs.org>

	* Packages released: bbdb c-support.

	*        Packages   released:  re-builder   sml-mode  xemacs-devel
	xslt-process.