@@ -45,10 +45,10 @@ PACKAGES := xemacs-base fsf-compat mail-lib \
 	\
 	Sun ada auctex bbdb build c-support calc calendar clearcase \
 	cookie crisp dictionary docbookide ecb ediff edt emerge \
-	erc escreen eshell ess eudc footnote forms fortran-modes \
+	erc escreen eshell eudc footnote forms fortran-modes \
 	frame-icon games general-docs gnats gnus haskell-mode \
 	hm--html-menus hyperbole ibuffer idlwave igrep ilisp \
-	jde liece mailcrypt mew mh-e mine misc-games mmm-mode \
+	jde mailcrypt mew mh-e mine misc-games mmm-mode \
 	ocaml oo-browser pc pcl-cvs pcomplete perl-modes pgg \
 	prog-modes ps-print psgml psgml-dtds python-modes re-builder \
 	reftex riece rmail ruby-modes sasl scheme semantic sgml \
